templates/balance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-balance-service
  labels:
    app: xebula-balance-service
spec:
  selector:
    matchLabels:
      app: xebula-balance-service
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-balance-service
    spec:
      containers:
        - name: xebula-balance-service
          image: enesserol7/xebula-balance-service:bfebd7d
          ports:
            - containerPort: 80
              name: api-http
      imagePullSecrets:
        - name: regcred
