templates/content-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-content-service
  labels:
    app: xebula-content-service
spec:
  selector:
    matchLabels:
      app: xebula-content-service
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-content-service
    spec:
      containers:
        - name: xebula-content-service
          image: enesserol7/xebula-content-service:fce846f
          ports:
            - containerPort: 80
              name: api-http
      imagePullSecrets:
        - name: regcred
