templates/crypto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-crypto-service
  labels:
    app: xebula-crypto-service
spec:
  selector:
    matchLabels:
      app: xebula-crypto-service
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-crypto-service
    spec:
      containers:
        - name: xebula-crypto-service
          image: enesserol7/xebula-crypto-service:a29c372
          ports:
            - containerPort: 80
              name: api-http
      imagePullSecrets:
        - name: regcred
