templates/feed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-feed-service
  labels:
    app: xebula-feed-service
spec:
  selector:
    matchLabels:
      app: xebula-feed-service
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-feed-service
    spec:
      containers:
        - name: xebula-feed-service
          image: enesserol7/xebula-feed-service:b228268
          ports:
            - containerPort: 9000
              name: api-http
      imagePullSecrets:
        - name: regcred
