templates/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-keycloak
spec:
  selector:
    matchLabels:
      app: xebula-keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args: ["start-dev"]
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
      imagePullSecrets:
        - name: regcred
