templates/kms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-kms
  labels:
    app: xebula-kms
spec:
  selector:
    matchLabels:
      app: xebula-kms
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-kms
    spec:
      containers:
        - name: xebula-kms
          image: enesserol7/xebula-kms:c9b04cc
          ports:
            - containerPort: 9000
              name: api-http
      imagePullSecrets:
        - name: regcred
