templates/stream-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-stream-service
  labels:
    app: xebula-stream-service
spec:
  selector:
    matchLabels:
      app: xebula-stream-service
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-stream-service
    spec:
      containers:
        - name: xebula-stream-service
          image: enesserol7/xebula-stream-service:4928abe
          ports:
            - containerPort: 4000
              name: api-http
      imagePullSecrets:
        - name: regcred
