templates/user-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-user-api
  labels:
    app: xebula-user-api
spec:
  selector:
    matchLabels:
      app: xebula-user-api
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-user-api
    spec:
      containers:
        - name: xebula-user-api
          image: enesserol7/xebula-user-api:3a48fd8
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: api-http
      imagePullSecrets:
        - name: regcred
