templates/wallet-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xebula-wallet-api
  labels:
    app: xebula-wallet-api
spec:
  selector:
    matchLabels:
      app: xebula-wallet-api
  replicas: 1
  template:
    metadata:
      labels:
        app: xebula-wallet-api
    spec:
      containers:
        - name: xebula-wallet-api
          image: enesserol7/xebula-wallet-api:f7e84f7
          ports:
            - containerPort: 9000
              name: api-http
      imagePullSecrets:
        - name: regcred
