templates/balance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebula-balance-service
  labels:
    app: xebula-balance-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: xebula-balance-service
