templates/crypto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebula-crypto-service
  labels:
    app: xebula-crypto-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: xebula-crypto-service
