templates/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebula-keycloak
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: xebula-keycloak
