templates/kms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebula-kms
  labels:
    app: xebula-kms
spec:
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: xebula-kms
