templates/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash-svc
  namespace: elk-stack
spec:
  selector:
    app: logstash
  ports:
    - port: 5044
      targetPort: 5044
  type: ClusterIP
