templates/mpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebula-mpc-service
  labels:
    app: xebula-mpc-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: xebula-mpc-service
