templates/user-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebula-user-api
  labels:
    app: xebula-user-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: xebula-user-api
