templates/wallet-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebula-wallet-api
  labels:
    app: xebula-wallet-api
spec:
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: xebula-wallet-api
