templates/web-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebula-web-ui
  labels:
    app: xebula-web-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: xebula-web-ui
