templates/stream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xebula-stream-service-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    cert-manager.io/issuer-kind: OriginIssuer
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: stream-dev.xebula.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xebula-stream-service
                port:
                  number: 4000
  tls:
    - hosts:
        - "*.xebula.io"
      secretName: xebula-cert
