templates/user-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xebula-user-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    cert-manager.io/issuer-kind: OriginIssuer
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - "*.xebula.io"
      secretName: xebula-cert
  rules:
    - host: api-dev.xebula.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xebula-user-api
                port:
                  number: 80
