templates/wallet-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xebula-wallet-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: wallet-api-dev.xebula.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xebula-wallet-api
                port:
                  number: 80
