templates/web-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xebula-web-ui-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dev.xebula.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xebula-web-ui
            port:
              number: 80
  tls:
  - hosts:
    - dev.xebula.io
    secretName: xebula-web-tls
